--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,35 @@
 @charset "UTF-8";
-/*
-COLORS:
+/* NOTE: Rely more on specificity than on the order of selectors */
+/* BEM */
+/* Block -  standalone component that is meaningful on its own
+Element - part of a block that has no standalone meaning
+Modifier - a diff version of a block or an element */
+/* Architecture */
+/* 7 different folders for partial Sass files, and 1 main Sass file to import all other files into a compiled CSS stysheet.
+base/
+components/
+layout/ 
+pages/
+themes/ 
+abstracts/
+vendors/ */
+/* NOTE: Main Sass Features */
+/* 1. Variables -> For reusable values such as colors, font-sizes, spacing, etc.
+2. Nesting -> to nest selectors inside of one another, allowing us to write less code;
+3. Operators -> for mathematical operations right inside of CSS
+4. Partials and imports -> to write CSS in differentn files and importing them all into one single file
+5. Mixins -> to write reusable pieces of CSS code
+6. Functions -> similar to mixins, with difference that they produce a value that can be used in other places
+7. Extends -> to make different selectors inherit declarations that are common to all of them.
+8. control directives -> for writing complex code using conditionals and loops */
+/* ✅ Use @extend when:
+You don’t need customization (no parameters).
+You want to reduce duplicate CSS and keep the file size smaller.
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-/* Universal CSS */
+✅ Use @mixin when:
+You need customization (passing parameters).
+You are styling different elements that don’t share a common base class.
+The styles cannot be combined in one declaration (e.g., different media queries). */
 *,
 *::before,
 *::after {
@@ -39,17 +61,14 @@ body {
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
-
 .header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
-
-.header__logo {
+.header__logo-box .header__logo {
   height: 3.5rem;
 }
-
 .header__text-box {
   position: absolute;
   top: 44%;
@@ -64,7 +83,6 @@ body {
   margin-bottom: 6rem;
   backface-visibility: hidden; /*fixes shaking esp. w/ animation or 3d effects*/
 }
-
 .heading-primary--head {
   display: block;
   font-size: 6rem;
@@ -77,7 +95,6 @@ body {
   /* animation-delay: 3s; */
   /* animation-iteration-count: 3; */
 }
-
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
@@ -133,8 +150,10 @@ body {
 }
 /* pseudo class */
 /* initial state */
-.btn:link,
-.btn:visited {
+.btn {
+  /* while clicking */
+}
+.btn:link, .btn:visited {
   position: relative;
   display: inline-block;
   text-transform: uppercase;
@@ -144,23 +163,25 @@ body {
   transition: all 0.2s;
   font-size: 1.6rem;
 }
-
 .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
-
-/* while clicking */
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
 .btn:active {
   transform: translateY(-1px);
   box-shadow: 0 0.4rem 1rem rgba(0, 0, 0, 0.2);
 }
-
 .btn--white {
   background-color: #fff;
   color: #777;
 }
-
+.btn--white::after {
+  background-color: #fff;
+}
 .btn::after {
   content: "";
   display: inline-block;
@@ -173,51 +194,9 @@ body {
   z-index: -1;
   transition: all 0.3s;
 }
-
-.btn--white::after {
-  background-color: #fff;
-}
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
 .btn--hero {
   animation: moveFromButton 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; /* Applies the first keyframe’s styles before the animation starts, even during the delay */
 }
-
-/* NOTE: Rely more on specificity than on the order of selectors */
-/* BEM */
-/* Block -  standalone component that is meaningful on its own
-Element - part of a block that has no standalone meaning
-Modifier - a diff version of a block or an element */
-/* Architecture */
-/* 7 different folders for partial Sass files, and 1 main Sass file to import all other files into a compiled CSS stysheet.
-base/
-components/
-layout/ 
-pages/
-themes/ 
-abstracts/
-vendors/ */
-/* NOTE: Main Sass Features */
-/* 1. Variables -> For reusable values such as colors, font-sizes, spacing, etc.
-2. Nesting -> to nest selectors inside of one another, allowing us to write less code;
-3. Operators -> for mathematical operations right inside of CSS
-4. Partials and imports -> to write CSS in differentn files and importing them all into one single file
-5. Mixins -> to write reusable pieces of CSS code
-6. Functions -> similar to mixins, with difference that they produce a value that can be used in other places
-7. Extends -> to make different selectors inherit declarations that are common to all of them.
-8. control directives -> for writing complex code using conditionals and loops */
-/* ✅ Use @extend when:
-You don’t need customization (no parameters).
-You want to reduce duplicate CSS and keep the file size smaller.
-
-✅ Use @mixin when:
-You need customization (passing parameters).
-You are styling different elements that don’t share a common base class.
-The styles cannot be combined in one declaration (e.g., different media queries). */
 
 /*# sourceMappingURL=style.css.map */
