--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,7 @@
 @use "../abstracts" as *;
 
 .btn {
+  &,
   &:link,
   &:visited {
     position: relative;
@@ -11,6 +12,9 @@
     border-radius: 100px;
     transition: all 0.2s;
     font-size: $default-font-size;
+
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -23,7 +27,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1px);
     box-shadow: 0 0.4rem 1rem rgba($color-black, 0.2);
   }
