--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @use "components/bg-video";
 @use "components/form";
 
+@use "layout/navigation";
 @use "layout/header";
 @use "layout/grid";
 @use "layout/footer";
