--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,47 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+// MEDIA QUERY MANAGER
+/*
+0 - 600px -> Phone
+600 - 900px -> Tablet portrait
+900 - 1200px -> tablet landscape
+1200 - 1800 _> normal
+1800 + : big desktop
+
+// breakpoint argument choicces
+
+- phone
+- tab-port
+- tab-land
+-big-desktop
+*/
+
+// ORDER: Base -> typography _> general layout _> grid -> page laout _> components
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content; // 600px
+    }
+  }
+
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content; // 900px
+    }
+  }
+
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content; // 1200
+    }
+  }
+
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content; // 1800
+    }
+  }
+}
