--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,6 @@
 // partial sass file
+@use "../abstracts/mixins" as *;
+
 *,
 *::before,
 *::after {
@@ -9,9 +11,28 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; //1rem = 10px
+
+  @include respond(tab-land) {
+    //width < 900
+    font-size: 56.25%; //1rem = 9px
+  }
+
+  @include respond(tab-port) {
+    // width < 600
+    font-size: 60%; // 1rem = 8px
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; // 1 rem = 12px
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
