--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,5 @@
 @use "../abstracts" as *;
+@use "../abstracts/mixins" as *;
 
 body {
   /* Inheritance */
@@ -6,7 +7,6 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -26,6 +26,11 @@ body {
     animation-duration: 1.2s;
     animation-timing-function: ease-out;
 
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
+
     /* https://developer.mozilla.org/en-US/docs/Web/CSS/animation */
     /* animation-delay: 3s; */
     /* animation-iteration-count: 3; */
@@ -41,6 +46,11 @@ body {
   animation-duration: 1.2s;
   animation-timing-function: ease-out; */
     animation: moveFromRight 1.2s ease-in-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5em;
+      font-size: 5rem;
+    }
   }
 }
 
@@ -59,6 +69,14 @@ body {
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(12deg) scale(1.1);
