--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,13 +1,23 @@
+@use "../abstracts/mixins" as *;
+
 .u-center-text {
   text-align: center;
 }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem;
+
+  @include respond(tab-port) {
+    margin-bottom: 5rem;
+  }
 }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem;
+
+  @include respond(tab-port) {
+    margin-bottom: 3rem;
+  }
 }
 .u-margin-bottom-small {
   margin-bottom: 1.5rem;
