--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -11,6 +11,16 @@
   font-size: $default-font-size;
   transform: skew(-12deg);
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skew(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -25,6 +35,10 @@
     // shape-outside: url("img")
     // margin-right: 3rem;
     // border-radius: 50%;
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skew(0);
+    }
   }
 
   &__img {
@@ -38,6 +52,10 @@
 
   &__text {
     transform: skew(12deg);
+
+    @include respond(phone) {
+      transform: skew(0);
+    }
   }
 
   &__caption {
